# getodo

./: Makefile.cvs  Makefile.in  aclocal.m4  configure  configure.ac  getodo.kdevelop  getodo.sln  mainpage.h  sigc-2.0d.vsprops
doc/: TODO  architecture-cs.txt  data-types.txt  gui.txt  notes.txt  readme-cs.txt  todo.txt
getodogui/: filter-dialog.glade  filter-dialog.h  filtermodel.h  getodo-mainwindow.glade  getodogui.cpp  getodogui.h  getodogui.vcproj  main-window.cpp  main-window.glade  main-window.h  recurrence-dialog.cpp  recurrence-dialog.h  stdafx.h  tagmodel.cpp  tagmodel.h  taskmodel.cpp  taskmodel.h
include/: getodo.h
lib/: Makefile.in  sqlite3.lib
libgetodo/: common.h  datetime.cpp  datetime.h  filterrule.cpp  filterrule.h  libgetodo.vcproj  recurrence.cpp  recurrence.h  sqlite.cpp  tag.cpp  tag.h  task.cpp  task.h  taskmanager.cpp  taskmanager.h
src/: getodo.cpp  (+3 more)
src/libgetodo/: Makefile.am  Makefile.in  filterrule.cpp  filterrule.h  getodo.cpp  getodo.h  tag.cpp  tag.h  task.cpp  task.h  taskmanager.cpp  taskmanager.h
trunk/: Doxyfile  configure  configure.ac  getodo.kdevelop  getodo.sln
trunk/doc/: TODO  architecture-cs.txt  data-types.txt  files.txt  gui.txt  notes.txt  todo.txt
trunk/doc/sql/: getodo-sqlite.sql
trunk/getodogui/: filter-dialog.cpp  filtermodel.cpp  getodo-mainwindow.glade  getodogui.cpp  getodogui.h  getodogui.vcproj  main-window.cpp  main-window.glade  main-window.h  recurrence-dialog.cpp  recurrence-dialog.glade  recurrence-dialog.h  stdafx.h  tagmodel.cpp  tagmodel.h  taskmodel.cpp  taskmodel.h  treeview.glade
trunk/include/: getodo.h
trunk/lib/: Makefile.am  Makefile.in  libsqlite3x.lib
trunk/lib/sqlite3x/: Makefile  Makefile.am  refcount.hpp  sq3.cpp  sq3_log_db.cpp  sq3_settings_db.hpp
trunk/libgetodo/: common.h  datetime.cpp  datetime.h  filterrule.cpp  filterrule.h  libgetodo.vcproj  recurrence.cpp  recurrence.h  tag.cpp  tag.h  task.cpp  task.h  taskmanager.cpp  taskmanager.h
trunk/playground/: getodo-sqlite.sql
trunk/sqlite3x/: doxygen-index.h  sqlite3x.vcproj
trunk/src/: Makefile.am  Makefile.in  configure.ac  getodo.cpp  getodo.h
trunk/src/getodogui/: Makefile.am  Makefile.in
trunk/src/libgetodo/: Makefile.am  Makefile.in  filterrule.h  getodo.cpp  getodo.h  tag.cpp  tag.h  task.cpp  task.h  taskmanager.cpp  taskmanager.h
trunk/src/sqlite3x/: Doxyfile.at  mkdep.c  sq3_settings_db.cpp
trunk/src/test/: Makefile.in
trunk/src/test/test1-sql/: Makefile.am  test1.cpp
trunk/templates/: h
trunk/testing/: test1.cpp  test1.h  testing.vcproj
trunk/treemodel-prototype/: TagModel.h  getodogui.cpp  getodogui.h  treemodel-prototype.vcproj
(+86 files in other folders)
